<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BingMerchantApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="merchant">Merchant</string>
    <string name="customer">Customer</string>
    <string name="consumer">Consumer</string>
    <string name="name">Name</string>
    <string name="cellphone">Mobile Number</string>
    <string name="services">Services</string>
    <string name="use_current_location">Use My Current Location</string>
    <string name="submit">Submit</string>
    <string name="user_query">Send your Query To Marchant</string>
    <string name="post_query">Send Query</string>
    <string name="orderString">Business Requests</string>
    <string name="title_activity_merchant_signup">Bing Connect</string>
    <string name="title_activity_merchant_requests">Requests</string>
    <string name="title_activity_consumer_signup">ConsumerSignup</string>
    <string name="title_activity_consumer_vendors">ConsumerVendors</string>
    <string name="title_activity_user_tasks">UserTasks</string>
    <string name="button_merchant_revert">Service notifications</string>
    <string name="button_new_service">Request for a service</string>
    <string name="button_add_vendor">Add a vendor</string>
    <string name="button_recent_services">Review recent services</string>
    <string name="button_my_profile">My Profile</string>
    <string name="title_activity_merchant_reverts">MerchantReverts</string>
    <string name="title_activity_new_service_search">NewServiceSearch</string>
    <string name="title_activity_recent_service_reviews">RecentServiceReviews</string>
    <string name="title_activity_consumer_add_vendor">ConsumerAddVendor</string>
    <string name="title_activity_consumer_profile">ConsumerProfile</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="title_merchant_list">Search Results</string>
    <string name="title_merchant_detail">Service Details</string>
    <string name="search_service">Tell me what you are looking for</string>
    <string name="findMerchantButton">Find</string>
    <string name="favourite">Favourite</string>
    <string name="all">All</string>
    <string name="title_activity_search_query">SearchQuery</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_send_query">SendQuery</string>
    <string name="signup_merchant_checkbox">Business Registration</string>
    <string name="signup_address_line_1_hint">Address Line 1</string>
    <string name="signup_address_line_2_hint">Address Line 2</string>
    <string name="signup_address_state_hint">State</string>
    <string name="signup_address_country_hint">Country</string>
    <string name="signup_address_zipcode_hint">PIN Code</string>
    <string name="signup_address_line_2_text">Gachibowli, Hyderabad</string>
    <string name="signup_address_state_text">Telangana</string>
    <string name="signup_address_country_text">India</string>
    <string name="signup_address_zipcode_text">500032</string>
    <string name="signup_business_name_hint">Business Name</string>
    <string name="title_inputfield_list">InputFields</string>
    <string name="title_inputfield_detail">InputField Detail</string>
    <string name="switchMode">Switch Mode</string>
    <string name="title_merchantrequest_list">MerchantRequests</string>
    <string name="title_merchantrequest_detail">MerchantRequest Detail</string>
    <string name="accept_requests">Accept Request</string>
    <string name="reject_requests">Reject Request</string>
    <string name="request_completed">Request Completed</string>
    <string name="title_consumerrequest_list">Service Requests</string>
    <string name="title_consumerrequest_detail">Service Request Details</string>
    <string name="title_activity_search">Bing Connect</string>
    <string name="look">What are you looking for?</string>
    <string-array name="location_arrays">
        <item>Gachibowli</item>
        <item>Kondapur</item>
        <item>Jubilee Hills</item>
        <item>Film Nagar</item>
        <item>Banjara Hills</item>
        <item>Lingampally</item>
        <item>Secundarabad</item>
        <item>Begumpet</item>
    </string-array>
    <string-array name="frequent_array">
        <item>AGC Medicals</item>
        <item>Rajesh Electric</item>
        <item>Foot Spa Local</item>
    </string-array>
        <string name="recommond_merchant">Recommend Merchant</string>
        <string name="feedback_button">Feedback Button</string>
        <string name="send_feedback">Send Feedback</string>
        <string name="specialist_can_call_me_for_deltails">Specialist can call me for deltails</string>
        <string name="call_button">Call Button</string>

</resources>
