<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/merchantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name" />


    <EditText
        android:id="@+id/merchantCellphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/cellphone" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/merchantAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/merchantServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/services" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/merchantUseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_current_location" />

    <Button
        android:id="@+id/merchantSubmitRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</TableLayout>
