<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/serviceQuery"
        android:layout_width="260dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/search_service" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchQueryButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="33dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="1"
        android:onClick="GetQueryRelativeMerchants"
        android:text="@string/findMerchantButton" />

    <Button
        android:id="@+id/allMerchantButton"
        android:layout_width="149dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="4"
        android:text="@string/all"
        android:visibility="invisible"
        android:enabled="false"
        android:onClick="GetAllMerchants" />

    <Button
        android:id="@+id/favouriteMerchantButton"
        android:layout_width="160dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/favourite"
        android:visibility="invisible"
        android:enabled="false"
        android:onClick="GetFavouriteMerchants" />

</GridLayout>