<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/userMerchantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/merchant"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userQuery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.47"
        android:ems="10"
        android:hint="@string/user_query"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/userQueryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_query" />

</LinearLayout>