<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bingmerchantapp.MerchantRequestDetailFragment" >

    <LinearLayout
        android:id="@+id/consumerDetailsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/requestConsumerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumer"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/consumerCellPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/consumerDetailsHeader"
        android:layout_alignRight="@+id/consumerDetailsHeader"
        android:layout_below="@+id/consumerDetailsHeader"
        android:layout_marginTop="18dp"
        android:text="@string/cellphone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/consumerMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/consumerCellPhone"
        android:layout_alignRight="@+id/consumerCellPhone"
        android:layout_below="@+id/consumerCellPhone"
        android:layout_marginTop="18dp"
        android:text="@string/services"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/merchantRequestResponseButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/consumerMessage"
        android:layout_below="@+id/consumerMessage"
        android:layout_marginTop="14dp" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/accept_requests" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject_requests" />
        </RadioGroup>
        
        <Button
            android:id="@+id/submitRequestResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:onClick="SendQueryToConsumer"
            android:text="@string/submit" />

    </LinearLayout>



    <Button
        android:id="@+id/submitRequestCompletion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/merchantRequestResponseButtons"
        android:layout_alignRight="@+id/merchantRequestResponseButtons"
        android:layout_below="@+id/merchantRequestResponseButtons"
        android:text="@string/request_completed" />

</RelativeLayout>