<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bingmerchantapp.UserTasks" >

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="40dp"
        android:text="@string/button_merchant_revert" 
        android:onClick="gotToMerchantRevertScreeen"/>

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button01"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Button01"
        android:layout_marginRight="40dp"
        android:text="@string/button_new_service"         
        android:onClick="gotToNewServiceSearch"/>

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/feedbackButton"
        android:layout_alignRight="@+id/feedbackButton"
        android:layout_below="@+id/feedbackButton"
        android:text="@string/button_recent_services" 
        android:onClick="gotToRecentServiceReview"/>


    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button02"
        android:layout_alignRight="@+id/Button02"
        android:layout_below="@+id/Button02"
        android:text="@string/button_add_vendor"         
        android:onClick="gotToAddVendor"/>

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button03"
        android:layout_alignRight="@+id/Button03"
        android:layout_below="@+id/Button03"
        android:text="@string/button_my_profile" 
        android:onClick="gotToMyProfile"/>


</RelativeLayout>