<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bingmerchantapp.SendQuery" >

    <TextView
        android:id="@+id/queryPageMerchantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/merchant"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/sendQueryCellPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/queryPageMerchantName"
        android:layout_alignRight="@+id/queryPageMerchantName"
        android:layout_below="@+id/queryPageMerchantName"
        android:layout_marginTop="18dp"
        android:text="@string/cellphone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/consumerQuery"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_alignLeft="@+id/sendQueryCellPhone"
        android:layout_alignRight="@+id/sendQueryMerchantAddress"
        android:layout_below="@+id/sendQueryMerchantAddress"
        android:ems="10"
        android:hint="@string/search_service"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/sendQueryMerchantAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sendQueryCellPhone"
        android:layout_alignRight="@+id/sendQueryCellPhone"
        android:layout_below="@+id/sendQueryCellPhone"
        android:layout_marginTop="18dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/consumerQuery"
        android:layout_alignRight="@+id/consumerQuery"
        android:layout_below="@+id/consumerQuery"
        android:text="@string/specialist_can_call_me_for_deltails" />

    <Button
        android:id="@+id/sendQuerySubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:onClick="SendQueryToConsumer"
        android:text="@string/submit" />

</RelativeLayout>
