<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bingmerchantapp.ConsumerRequestDetailFragment" >

    <LinearLayout
        android:id="@+id/merchantDetailsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" 
        android:orientation="vertical">

        <TextView
            android:id="@+id/customerRequestMerchantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merchant"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/customerRequestMerchantBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merchant"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/merchantRequestResponseButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/merchantStatus"
        android:layout_below="@+id/merchantStatus"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

    </LinearLayout>

    <TextView
        android:id="@+id/merchantCellPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/merchantDetailsHeader"
        android:layout_below="@+id/merchantDetailsHeader"
        android:text="@string/cellphone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/merchantStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/merchantCellPhone"
        android:layout_below="@+id/merchantCellPhone"
        android:text="@string/services"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/recommendMerchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/merchantRequestResponseButtons"
        android:layout_toRightOf="@+id/merchantRequestResponseButtons"
        android:text="@string/recommond_merchant" />

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/recommendMerchant"
        android:layout_below="@+id/recommendMerchant"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/merchantCellPhone"
        android:text="@string/send_feedback" />

</RelativeLayout>